--- a/assets/sass/shortcode/_course.scss
+++ b/assets/sass/shortcode/_course.scss
@@ -691,6 +691,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    gap: 0 20px;
     .cs_item_name {
       display: flex;
       align-items: center;
@@ -802,10 +803,9 @@
       padding: 0 30px;
       border-radius: 3px;
       background: #f6f4ff;
-        @media (max-width: 575px) {
-          justify-content: flex-start;
-          
-        }
+      @media (max-width: 575px) {
+        justify-content: flex-start;
+      }
     }
     .cs_course_navigation_item {
       padding: 16px 0;
